--- a/part-04/mlb-tutorial-04.qmd
+++ b/part-04/mlb-tutorial-04.qmd
@@ -47,7 +47,35 @@ Der Händler startet in Woche 0 mit den folgenden Beständen:
 | **6** | 55 | ? | ? | ? | ? | ? | ? |
 
 ::: {.content-visible when-profile="solution"}
+
+```{=typst}
+#pagebreak()
+```
+
 **Lösungshinweise:**
+
+::: {.callout-tip collapse="true" title="Tipps und wichtige Formeln"}
+#### Reihenfolge der Ereignisse
+
+Beachten Sie die korrekte Reihenfolge der Aktionen **innerhalb jeder Woche**:
+
+1.  **Wareneingang:** Zu Beginn der Woche kommt eine eventuell vor $L=3$ Wochen getätigte Bestellung an. Dadurch steigt der physische Bestand und der Bestellbestand sinkt.
+2.  **Nachfrage-Erfüllung:** Die Nachfrage der aktuellen Woche wird bedient. Dies senkt den physischen und den disponiblen Bestand.
+3.  **Bestellentscheidung:** Am **Ende der Woche** wird geprüft, ob eine neue Bestellung ausgelöst werden muss.
+
+#### Die wichtigsten Formeln
+
+*   **Disponibler Bestand ($I^D$):** Die entscheidende Größe für die Bestellung. Er repräsentiert die Summe aus physischem und bestelltem Bestand.
+    $I^D_t(\text{vor Bestellung}) = I^D_{t-1}(\text{Ende}) - d_t$
+*   **Bestellentscheidung:** Prüfe am Ende der Woche: $I^D_t(\text{vor Bestellung}) \le s$?
+    *   Wenn **Ja**: Löse eine Bestellung über die Menge $q$ aus. Der disponible Bestand erhöht sich ***sofort***:
+        $I^D_t(\text{Ende}) = I^D_t(\text{vor Bestellung}) + q$
+    *   Wenn **Nein**: Der disponible Bestand bleibt für das Ende der Woche unverändert.
+*   **Physischer Bestand ($I^P$):**
+    *   $I^P_t(\text{Ende}) = I^P_{t-1}(\text{Ende}) + \text{Wareneingang}_t - d_t$  (kann nicht negativ werden)
+*   **Bestellbestand ($I^O$):**
+    *   $I^O_t(\text{Ende}) = I^O_{t-1}(\text{Ende}) - \text{Wareneingang}_t + \text{Neue Bestellung}_t$
+:::
 
 Die Logik ist wie folgt:
 
@@ -109,19 +137,19 @@ for t in range(1, T + 1):
         print(f"Woche {t}: Meldebestand unterschritten ({disp_bestand} <= {s}). Bestellung ausgelöst.")
         bestellung_getaetigt = q
         bestell_bestand += q
+        disp_bestand += q
         liefer_woche = t + L
         lieferungen[liefer_woche] = lieferungen.get(liefer_woche, 0) + q
-        # Wichtig: Disponibler Bestand ändert sich durch die Bestellung NICHT.
         
     results.append({
         'Woche (t)': t,
         'Nachfrage $d_t$': demand_t,
-        'Disp. Bestand (Anfang)': disp_bestand_anfang,
-        'Bestellung? (Menge)': bestellung_getaetigt,
-        'Disp. Bestand (Ende)': disp_bestand,
-        'Phys. Bestand (Ende)': phys_bestand,
-        'Bestellbestand (Ende)': bestell_bestand,
-        'Fehlbestand (Ende)': fehl_bestand
+        'Disp. Bestand (A)': disp_bestand_anfang,
+        'Bestellung? (E)': bestellung_getaetigt,
+        'Disp. Bestand (E)': disp_bestand,
+        'Phys. Bestand (E)': phys_bestand,
+        'Bestellbestand (E)': bestell_bestand,
+        'Fehlbestand (E)': fehl_bestand
     })
 
 df_results = pd.DataFrame(results)
@@ -129,6 +157,10 @@ print("\nVervollständigte Tabelle:")
 print(df_results.to_string(index=False))
 ```
 :::
+
+```{=typst}
+#pagebreak()
+```
 
 ## Aufgabe 2: Sicherheitsbestand und Servicegrade
 
@@ -142,7 +174,45 @@ Ein Online-Händler für ein populäres Smartphone-Modell möchte seinen Lagerbe
 4.  **Servicegrad:** Wenn der Händler eine feste Bestellmenge von $q=500$ Stück verwendet, welchen $\beta$-Servicegrad (Mengen-Servicegrad) erreicht er mit seiner Politik?
 
 ::: {.content-visible when-profile="solution"}
+
+```{=typst}
+#pagebreak()
+```
+
 **Lösungshinweise:**
+
+::: {.callout-tip collapse="true" title="Tipps und wichtige Formeln"}
+#### 1. Nachfrage während der Wiederbeschaffungszeit (WBZ)
+
+Der Risikozeitraum ist die Wiederbeschaffungszeit $L$. Wir müssen die Kennzahlen der Nachfrageverteilung für diesen längeren Zeitraum berechnen. Für unabhängige Perioden gilt:
+
+*   Erwartungswert der Nachfrage während WBZ: $\mu_L = L \cdot \mu_{\text{wöchentlich}}$
+*   Varianz der Nachfrage während WBZ: $\sigma_L^2 = L \cdot \sigma_{\text{wöchentlich}}^2$
+*   Standardabweichung der Nachfrage während WBZ: $\sigma_L = \sqrt{L} \cdot \sigma_{\text{wöchentlich}}$
+
+#### 2. Bestellpunkt und Sicherheitsbestand
+Der Bestellpunkt $s$ deckt die erwartete Nachfrage während der WBZ ab und enthält zusätzlich einen Puffer für Unsicherheit.
+
+*   **Bestellpunkt ($s$):** $s = \mu_L + SS$
+*   **Sicherheitsbestand ($SS$):** $SS = z \cdot \sigma_L$
+*   **Sicherheitsfaktor ($z$):** Dieser Wert hängt vom gewünschten $\alpha$-Servicegrad (Zyklus-Servicegrad) ab und wird aus der Standardnormalverteilung abgelesen: 
+    *   $z = \Phi^{-1}(\alpha)$, wobei $\Phi^{-1}$ die inverse kumulative Verteilungsfunktion ist (auch Quantilfunktion genannt).
+
+#### 3. Erwartete Fehlmenge ($E(B)$)
+
+Dies ist die durchschnittliche Anzahl an Einheiten, die pro Zyklus aufgrund von zu hoher Nachfrage nicht geliefert werden können.
+
+*   **Formel:** $E(B) = \sigma_L \cdot G_u(z)$
+*   **Standardisierte Verlustfunktion ($G_u(z)$):** $G_u(z) = \phi(z) - z(1 - \Phi(z))$
+    *   $\phi(z)$: Dichtefunktion der Standardnormalverteilung.
+    *   $\Phi(z)$: Kumulative Verteilungsfunktion der Standardnormalverteilung. Beachten Sie, dass $1 - \Phi(z)$ genau der Fehlbestandswahrscheinlichkeit $(1-\alpha)$ entspricht.
+
+#### 4. $\beta$-Servicegrad (Fill Rate)
+
+Dieser Servicegrad misst den prozentualen Anteil der Gesamtnachfrage, der direkt aus dem Lager bedient wird.
+
+*   **Formel:** $\beta = 1 - \frac{E(B)}{q}$
+:::
 
 ```{python}
 import numpy as np
@@ -196,6 +266,10 @@ print(f"   - beta = 1 - ({E_B:.4f} / {q}) = {beta:.4f} oder {beta*100:.2f}%")
 ```
 :::
 
+```{=typst}
+#pagebreak()
+```
+
 ## Aufgabe 3: Diskrete Nachfrage und Faltung
 
 Ein kleiner Kiosk verkauft eine spezielle importierte Limonade. Die tägliche Nachfrage ist nicht normalverteilt, sondern folgt einer einfachen diskreten Verteilung:
@@ -213,22 +287,47 @@ Die Wiederbeschaffungszeit beträgt genau **2 Tage**.
 3.  **Erwartete Fehlmenge:** Berechnen Sie die erwartete Fehlmenge $E(B)$ für den Bestellpunkt $s=3$.
 
 ::: {.content-visible when-profile="solution"}
+
+```{=typst}
+#pagebreak()
+```
+
 **Lösungshinweise:**
+
+::: {.callout-tip collapse="true" title="Tipps und wichtige Formeln"}
+#### 1. Faltung von Wahrscheinlichkeitsverteilungen
+
+Wenn Sie die Verteilung der Summe von zwei unabhängigen, diskreten Zufallsvariablen $D_1$ und $D_2$ (hier die Nachfrage an zwei aufeinanderfolgenden Tagen) finden wollen, müssen Sie deren Verteilungen "falten". Für die Gesamtnachfrage $Y_2 = D_1 + D_2$ berechnen Sie die Wahrscheinlichkeit $P(Y_2=k)$ wie folgt:
+$P(Y_2=k) = \sum_{j} P(D_1=j) \cdot P(D_2=k-j)$
+
+**Beispiel:** Um die Wahrscheinlichkeit für eine Gesamtnachfrage von 2 zu finden ($k=2$), summieren Sie die Wahrscheinlichkeiten aller möglichen Kombinationen auf, die 2 ergeben:
+$P(Y_2=2) = P(D_1=0, D_2=2) + P(D_1=1, D_2=1) + P(D_1=2, D_2=0)$
+Da die Tage unabhängig sind, ist $P(D_1=a, D_2=b) = P(D=a) \cdot P(D=b)$.
+
+#### 2. Fehlbestandswahrscheinlichkeit ($1-\alpha$)
+Ein Fehlbestand tritt ein, wenn die Nachfrage während der Wiederbeschaffungszeit ($Y_2$) den Bestellpunkt ($s$) übersteigt.
+$P(\text{Fehlbestand}) = P(Y_2 > s)$
+
+#### 3. Erwartete Fehlmenge ($E(B)$)
+Die erwartete Fehlmenge ist die Summe aller möglichen Fehlmengen, gewichtet mit ihren jeweiligen Eintrittswahrscheinlichkeiten.
+$E(B) = \sum_{y} \max(0, y - s) \cdot P(Y_2=y)$
+Sie müssen also für jeden möglichen Nachfragewert $y$ die Fehlmenge $(y-s)$ berechnen (falls diese positiv ist) und mit der Wahrscheinlichkeit $P(Y_2=y)$ multiplizieren.
+:::
 
 **1. Wahrscheinlichkeitsverteilung der Gesamtnachfrage über 2 Tage (Y2):**
 
 Wir müssen alle möglichen Kombinationen der Nachfrage an Tag 1 ($D_1$) und Tag 2 ($D_2$) betrachten. Die Gesamtnachfrage ist $Y_2 = D_1 + D_2$.
 
 -   **P(Y2 = 0):** Nur wenn $D_1=0$ und $D_2=0$.
-    $P(Y_2=0) = P(D=0) \cdot P(D=0) = 0.2 \cdot 0.2 = 0.04$
+    -   $P(Y2 = 0) = 0.2 \cdot 0.2 = 0.04$
 -   **P(Y2 = 1):** Wenn ($D_1=0, D_2=1$) oder ($D_1=1, D_2=0$).
-    $P(Y_2=1) = P(0,1) + P(1,0) = (0.2 \cdot 0.6) + (0.6 \cdot 0.2) = 0.12 + 0.12 = 0.24$
+    -   $P(Y2 = 1) = 0.2 \cdot 0.6 + 0.6 \cdot 0.2 = 0.12 + 0.12 = 0.24$
 -   **P(Y2 = 2):** Wenn ($D_1=0, D_2=2$), ($D_1=1, D_2=1$), oder ($D_1=2, D_2=0$).
-    $P(Y_2=2) = P(0,2) + P(1,1) + P(2,0) = (0.2 \cdot 0.2) + (0.6 \cdot 0.6) + (0.2 \cdot 0.2) = 0.04 + 0.36 + 0.04 = 0.44$
+    -   $P(Y2 = 2) = 0.2 \cdot 0.2 + 0.6 \cdot 0.6 + 0.2 \cdot 0.2 = 0.04 + 0.36 + 0.04 = 0.44$
 -   **P(Y2 = 3):** Wenn ($D_1=1, D_2=2$) oder ($D_1=2, D_2=1$).
-    $P(Y_2=3) = P(1,2) + P(2,1) = (0.6 \cdot 0.2) + (0.2 \cdot 0.6) = 0.12 + 0.12 = 0.24$
+    -   $P(Y2 = 3) = 0.6 \cdot 0.2 + 0.2 \cdot 0.6 = 0.12 + 0.12 = 0.24$
 -   **P(Y2 = 4):** Nur wenn $D_1=2$ und $D_2=2$.
-    $P(Y_2=4) = P(2,2) = 0.2 \cdot 0.2 = 0.04$
+    -   $P(Y2 = 4) = 0.2 \cdot 0.2 = 0.04$
 
 **Zusammenfassung der Verteilung für Y2:**
 
@@ -256,6 +355,4 @@ $E(B) = (0 \cdot P(Y_2=0)) + (0 \cdot P(Y_2=1)) + (0 \cdot P(Y_2=2)) + (0 \cdot 
 $E(B) = 1 \cdot 0.04 = 0.04$
 
 Die erwartete Fehlmenge pro Bestellzyklus beträgt 0.04 Flaschen.
-
-```
 ::: 
