--- a/part-02/mlb-tutorial-02.qmd
+++ b/part-02/mlb-tutorial-02.qmd
@@ -42,7 +42,30 @@ Um die Gesamtkosten zu minimieren, soll das exakte Verfahren von **Wagner und Wh
 3.  **Optimalen Produktionsplan ableiten:** Bestimmen Sie durch Rückverfolgung (Backtracking) aus den Ergebnissen von Schritt 2, in welchen Wochen eine Produktion stattfinden soll und wie groß die jeweilige Losgröße ist. Wie hoch sind die minimalen Gesamtkosten?
 
 ::: {.content-visible when-profile="solution"}
+
+```{=typst}
+#pagebreak()
+```
+
 **Lösung (Python-Code):**
+
+::: {.callout-tip collapse="true" title="Tipps und wichtige Formeln"}
+#### 1. Kostenmatrix $c_{\tau j}$
+Die Kostenmatrix ist das Herzstück des Algorithmus. Der Wert $c_{\tau j}$ gibt an, was es kostet, in Periode $\tau$ ein Los zu produzieren, das exakt die Nachfrage von Periode $\tau$ bis einschließlich Periode $j$ deckt.
+*   **Formel:** $c_{\tau j} = s + \sum_{k=\tau+1}^{j} h \cdot (k-\tau) \cdot d_k$
+*   **In Worten:** Die Kosten setzen sich zusammen aus **einmaligen Rüstkosten** $s$ und den **kumulierten Lagerkosten**. Die Lagerkosten für den Bedarf $d_k$ (der in Periode $\tau$ produziert, aber erst in $k$ gebraucht wird) betragen $h \cdot (k-\tau) \cdot d_k$, da die Menge $d_k$ für $(k-\tau)$ Perioden gelagert werden muss.
+
+#### 2. Der Wagner-Whitin-Algorithmus (Rekursion)
+Der Algorithmus findet die minimalen Kosten $f_j$ für ein Problem mit $j$ Perioden, indem er alle Möglichkeiten für das letzte Los ausprobiert.
+*   **Rekursionsformel:** $f_j = \min_{1 \le \tau \le j} \{ f_{\tau-1} + c_{\tau j} \}$
+*   **Startwert:** $f_0 = 0$
+*   **In Worten:** Die minimalen Kosten für $j$ Perioden ($f_j$) ergeben sich, indem man die beste Option auswählt: "Was kostet es, wenn das letzte Los in Periode $\tau=1$ startet und bis $j$ reicht? Was, wenn es in $\tau=2$ startet?" usw. Die Kosten einer Option sind die Summe der Kosten für das letzte Los ($c_{\tau j}$) und den minimalen Kosten für den Zeitraum davor ($f_{\tau-1}$).
+
+#### 3. Backtracking
+*   Starten Sie bei $j=T$ (im Beispiel $j=6$). Schauen Sie nach, welches $\tau$ zu den minimalen Kosten $f_6$ geführt hat. Das ist Ihr letztes Produktionslos (von $\tau$ bis 6).
+*   Der nächste Untersuchungszeitpunkt ist nun $j = \tau - 1$. Schauen Sie wieder nach, welches $\tau'$ zu den minimalen Kosten $f_{\tau-1}$ geführt hat. Das ist Ihr vorletztes Los.
+*   Wiederholen Sie dies, bis Sie bei $j=0$ angekommen sind.
+:::
 
 ```{python}
 import pandas as pd
@@ -175,7 +198,31 @@ Sie erhalten den Auftrag, drei gängige Heuristiken auf die Daten aus Aufgabe 1 
 4.  **Vergleich:** Stellen Sie die Produktionspläne und Gesamtkosten der drei Heuristiken der optimalen Lösung aus Aufgabe 1 gegenüber. Wie gut schlagen sich die Heuristiken?
 
 ::: {.content-visible when-profile="solution"}
-**Lösung (Python-Code):**
+
+```{=typst}
+#pagebreak()
+```
+
+**Lösungshinweise:**
+
+::: {.callout-tip collapse="true" title="Tipps und wichtige Formeln"}
+Die Heuristiken entscheiden iterativ, wie viele zukünftige Bedarfe in einem Los zusammengefasst werden. Gestartet wird in der ersten Periode mit Bedarf. Man prüft, ob man den Bedarf der nächsten Periode(n) mit aufnimmt.
+
+#### 1. Stückkostenverfahren (Least-Unit-Cost, LUC)
+*   **Entscheidungsmetrik:** Durchschnittliche Kosten pro Produkteinheit.
+*   **Formel:** $\text{Stückkosten}(k) = \frac{s + \text{kumulierte Lagerkosten für } k \text{ Perioden}}{\text{kumulierter Bedarf für } k \text{ Perioden}}$
+*   **Regel:** Fasse so lange weitere Perioden $k$ in das Los mit auf, wie die Stückkosten sinken. Wenn sie steigen, war die vorherige Zusammenfassung die beste.
+
+#### 2. Stückperiodenausgleich (Part-Period-Balancing, PPB)
+*   **Grundidee:** Ein Los ist dann "gut", wenn die anfallenden Lagerkosten die eingesparten Rüstkosten ungefähr ausgleichen.
+*   **Formel:** Vergleiche `kumulierte Lagerkosten` mit `Rüstkosten s`.
+*   **Regel:** Fasse so lange weitere Perioden in das Los mit auf, wie die `kumulierten Lagerkosten` die `Rüstkosten s` **nicht** übersteigen. Die letzte Periode, für die das gilt, bestimmt die Losgröße.
+
+#### 3. Silver-Meal-Verfahren (SM)
+*   **Entscheidungsmetrik:** Durchschnittliche Kosten pro Periode (nicht pro Einheit).
+*   **Formel:** $\text{Kosten pro Periode}(k) = \frac{s + \text{kumulierte Lagerkosten für } k \text{ Perioden}}{k}$
+*   **Regel:** Identisch zum Stückkostenverfahren: Fasse so lange weitere Perioden $k$ in das Los mit auf, wie die Kosten pro Periode sinken. Wenn sie steigen, war die vorherige Zusammenfassung die beste.
+:::
 
 ```{python}
 import pandas as pd
@@ -341,7 +388,35 @@ Die "Duisburger Perle" stellt fest, dass die Gär- und Lagertanks einen Engpass 
 4.  **Diskussion:** Erläutern Sie kurz, warum das separate Anwenden des Wagner-Whitin-Algorithmus und anschließende Anpassen keine garantiert optimale Lösung für das kapazitierte Problem (CLSP) liefert.
 
 ::: {.content-visible when-profile="solution"}
-**Lösung (Python-Code):**
+
+```{=typst}
+#pagebreak()
+```
+
+**Lösungshinweise:**
+
+::: {.callout-tip collapse="true" title="Tipps und wichtige Formeln"}
+#### 1. Unkapazitierte Planung (Wagner-Whitin)
+*   Dieser Schritt ist identisch zur Aufgabe 1. Sie wenden den Wagner-Whitin-Algorithmus einfach mit den Daten des neuen Produkts ("Maibock") an, um dessen (isoliert betrachtet) optimalen Produktionsplan zu finden.
+
+#### 2. Kapazitätsprüfung
+*   Die Gesamtkapazität in einer Woche `t` wird durch die Summe aller Produktions- und Rüstaktivitäten in dieser Woche verbraucht.
+*   **Formel:**
+    $\text{Kapazitätsbedarf}_t = (\text{Menge}_{Helles, t} \cdot tb_{Helles} + \text{Setup}_{Helles,t} \cdot tr_{Helles}) + (\text{Menge}_{Bock, t} \cdot tb_{Bock} + \text{Setup}_{Bock, t} \cdot tr_{Bock})$
+*   `Setup_{Produkt,t}` ist eine binäre Variable: 1, wenn für das Produkt in Woche `t` produziert (also gerüstet) wird, sonst 0.
+*   Der berechnete `Kapazitätsbedarf_t` wird mit dem `Kapazitätslimit_t` (150 KE) verglichen.
+
+#### 3. Heuristische Anpassung
+*   Hier gibt es keine Standardformel, es geht um eine logische "Reparatur" des Plans.
+*   **Ansätze:**
+    *   **Vorziehen:** Kann die Produktion eines Loses, das den Konflikt verursacht, in eine frühere Woche mit freier Kapazität verschoben werden? (Achtung, erhöht Lagerkosten!)
+    *   **Aufteilen:** Kann ein großes Los in zwei kleinere aufgeteilt werden, die in unterschiedlichen Wochen produziert werden? (Achtung, verursacht zusätzliche Rüstkosten!)
+*   Ziel ist es, einen zulässigen Plan zu finden und die dadurch entstehenden Mehrkosten zu berechnen.
+
+#### 4. Diskussion (CLSP - Capacitated Lot-Sizing Problem)
+*   Das Kernproblem ist die **Ressourcenkonkurrenz**. Die Entscheidung, ein großes Los für Produkt A zu produzieren (lokal optimal, um Rüstkosten zu sparen), kann Produkt B die Kapazität "stehlen" und es zu einem teureren Produktionszeitpunkt zwingen.
+*   Eine **simultane Optimierung** (die sehr komplex ist) würde diesen Trade-off zwischen den Produkten direkt berücksichtigen, anstatt sie getrennt zu betrachten und nachträglich zu reparieren. Die "Reparatur" ist selten der global optimale Weg.
+:::
 
 ```{python}
 import pandas as pd
